ModemManager returns inconsistent time between Telit and Quectel modems
mm_modem_time_get_network_time_sync returns <local time + offset> for Telit Modem while it returns <GMT time + offset> for Quectel modem. And so when modem was changed between the two in the system, the system was returning unexpected time (i.e. timezone adjustment is being done even though the modem was already returning local time).
For Telit modem, mmcli -m 0 --command=AT+CCLK?
returns:
'+CCLK: "20/06/24,14:30:37-28"'
While for Quectel modem, same command executed at almost the same time returns:
'+CCLK: "20/06/24,21:30:36-28"'
When checking AT specification, it just says CCLK should return local time in <time><time diff between local time and GMT>
Is <time>
supposed to be local time?
Telit version: HE910 2.00.006
Quectel version: EG25GGBR07A07M2G