plugins/quectel/mm-broadband-modem-quectel.c
@@ -10,19 +10,21 @@
  * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  * GNU General Public License for more details:
  *
- * Copyright (C) 2018 Aleksander Morgado <aleksander@aleksander.es>
+ * Copyright (C) 2018-2020 Aleksander Morgado <aleksander@aleksander.es>
  */
 
 #include <config.h>
 
 #include "mm-broadband-modem-quectel.h"
-#include "mm-shared-quectel.h"
 #include "mm-iface-modem-firmware.h"
 #include "mm-iface-modem-location.h"
+#include "mm-iface-modem-time.h"
+#include "mm-shared-quectel.h"
 
 static void iface_modem_init          (MMIfaceModem         *iface);
 static void iface_modem_firmware_init (MMIfaceModemFirmware *iface);
 static void iface_modem_location_init (MMIfaceModemLocation *iface);
+static void iface_modem_time_init     (MMIfaceModemTime     *iface);
 static void shared_quectel_init       (MMSharedQuectel      *iface);
 
 static MMIfaceModemLocation *iface_modem_location_parent;
@@ -31,6 +33,7 @@ G_DEFINE_TYPE_EXTENDED (MMBroadbandModemQuectel, mm_broadband_modem_quectel, MM_
                         G_IMPLEMENT_INTERFACE (MM_TYPE_IFACE_MODEM, iface_modem_init)
                         G_IMPLEMENT_INTERFACE (MM_TYPE_IFACE_MODEM_FIRMWARE, iface_modem_firmware_init)
                         G_IMPLEMENT_INTERFACE (MM_TYPE_IFACE_MODEM_LOCATION, iface_modem_location_init)
+                        G_IMPLEMENT_INTERFACE (MM_TYPE_IFACE_MODEM_TIME, iface_modem_time_init)
                         G_IMPLEMENT_INTERFACE (MM_TYPE_SHARED_QUECTEL, shared_quectel_init))
 
 /*****************************************************************************/
@@ -87,6 +90,13 @@ static MMIfaceModemLocation *
 peek_parent_location_interface (MMSharedQuectel *self)
 {
     return iface_modem_location_parent;
+}
+
+static void
+iface_modem_time_init (MMIfaceModemTime *iface)
+{
+    iface->check_support        = mm_shared_quectel_time_check_support;
+    iface->check_support_finish = mm_shared_quectel_time_check_support_finish;
 }
 
 static void
